Add models with validation
